[package]
name = "todo_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.3", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"

axum = "0.7.2"
bb8 = "0.8.1"
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-http = { version = "0.5.0", features = ["trace"] }
chrono = "0.4.31"
jsonwebtoken = "9.2.0"
